[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>", "Luan Mattner Müller <https://github.com/luanmm>"]
categories = ["embedded", "hardware-support", "no-std", "BBC Microbit"]
description = "Platform-agnostic Rust driver for the DHT11 temperature and humidity sensor."
edition = "2021"
homepage = "https://github.com/plorefice/dht11-rs"
keywords = ["embedded-hal-driver"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT OR Apache-2.0"
name = "dht11"
readme = "README.md"
repository = "https://github.com/plorefice/dht11-rs"
version = "0.3.1"

[dependencies]
embedded-hal = "1.0.0"
cortex-m = { version = "=0.7.7", optional = true }

[dev-dependencies]
cortex-m = "=0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"

[features]
default = []
dwt = ["cortex-m"]

[[example]]
name = "stm32f407"

[[example]]
name = "stm32f407-dwt"
required-features = ["dwt"]

[profile.release]
lto = true